--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-global-header></app-global-header>
-<main class="max-w-screen-xl mx-auto p-4 sm:p-6 lg:p-6 lg:p-8">
-  <router-outlet></router-outlet>
-</main>
-<app-global-footer></app-global-footer>
+<div class="flex flex-col min-h-screen">
+  <app-site-header></app-site-header>
+  <main class="max-w-screen-xl mx-auto p-4 sm:p-6 lg:p-6 lg:p-8 flex-grow">
+    <router-outlet></router-outlet>
+  </main>
+  <app-site-footer></app-site-footer>
+</div>
