--- a/src/app/module-posts-listing/module-posts-listing.component.html
+++ b/src/app/module-posts-listing/module-posts-listing.component.html
@@ -1,5 +1,64 @@
 <ng-template [ngIf]="posts !== null && moduleData !== null">
-  <section class="my-12 bg-white">
+  <div class="relative px-8 mb-12">
+    <div class="max-w-screen-xl mx-auto">
+      <div class="sm:grid sm:gap-8 sm:grid-cols-2 lg:grid-cols-3">
+        <div *ngFor="let post of posts">
+          <a href="blog/{{ post.slug }}">
+            <div class="flex-col group mb-8 md:mb-0">
+              <div class="relative h-64">
+                <img
+                  src="{{ post.image.url }}"
+                  alt="{{ post.image.label }}"
+                  class="object-cover object-center rounded-t-lg"
+                  style="width: 100%; height: 100%"
+                />
+              </div>
+              <div class="bg-gray-100 p-8 border-2 border-t-0 rounded-b-lg">
+                <div
+                  class="
+                    uppercase
+                    text-primary-500 text-xs
+                    font-bold
+                    tracking-widest
+                    leading-loose
+                  "
+                >
+                  {{ post.category }}
+                </div>
+                <div class="border-b-2 border-primary-500 w-8"></div>
+                <div
+                  class="
+                    mt-4
+                    uppercase
+                    text-gray-600
+                    italic
+                    font-semibold
+                    text-xs
+                  "
+                >
+                  {{ post.date }}
+                </div>
+                <h2
+                  class="
+                    text-secondary-500
+                    mt-1
+                    font-black
+                    text-2xl
+                    group-hover:text-primary-500
+                    transition
+                    duration-300
+                  "
+                >
+                  {{ post.title }}
+                </h2>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <section class="my-12 bg-white">
     <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="lg:text-center">
         <p
@@ -46,5 +105,5 @@
         </ul>
       </div>
     </div>
-  </section>
+  </section> -->
 </ng-template>
