added tailwind and example env

--- a/src/app/preview-bar/preview-bar.component.html
+++ b/src/app/preview-bar/preview-bar.component.html
@@ -29,7 +29,7 @@
           class="text-2xl"
         >
           <div class="flex items-center">
-            <fa-icon class="tmr-2" [icon]="faInfoCircle"></fa-icon>
+            <fa-icon class="mr-2" [icon]="faInfoCircle"></fa-icon>
             <p class="hidden md:block text-sm">Help Center</p>
           </div>
         </a>
@@ -43,7 +43,7 @@
           class="text-2xl"
         >
           <div class="flex items-center">
-            <fa-icon class="tmr-2" [icon]="faGithub"></fa-icon>
+            <fa-icon class="mr-2" [icon]="faGithub"></fa-icon>
             <p class="hidden md:block text-sm">View on GitHub</p>
           </div>
         </a>
