--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files
 @import url("https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css");
-@import url("https://rsms.me/inter/inter.css");
+@import url("https://rsms.me/inter/inter.css"); */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
