--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-preview-bar></app-preview-bar>
 <div class="flex flex-col min-h-screen">
   <app-site-header></app-site-header>
   <main class="max-w-screen-xl mx-auto p-4 sm:p-6 lg:p-6 lg:p-8 flex-grow">
