--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,4 @@
-/* You can add global styles to this file, and also import other style files
-@import url("https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css");
-@import url("https://rsms.me/inter/inter.css"); */
+/* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
