--- a/src/app/components/agility/preview-bar/preview-bar.component.html
+++ b/src/app/components/agility/preview-bar/preview-bar.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isDevMode;" class="bg-agility relative px-8 text-gray-200">
+<div class="bg-agility relative px-8 text-gray-200">
   <div class="flex justify-between items-center max-w-screen-xl mx-auto">
     <div class="flex items-center">
       <span class="p-2 rounded-lg mr-4">
