Preloaded and Angular Routed
This is a solution to using the Angular Router to avoid client side requests

--- a/src/app/agility/pages/components/text-block-with-image/textblockwithimage.component.html
+++ b/src/app/agility/pages/components/text-block-with-image/textblockwithimage.component.html
@@ -149,7 +149,7 @@
           </p>
           <a
             *ngIf="item.primaryButton"
-            [href]="item.primaryButton.href"
+            [routerLink]="item.primaryButton.href"
             [target]="item.primaryButton.target"
             class="
               inline-block
