--- a/src/app/components/site-header/site-header.component.html
+++ b/src/app/components/site-header/site-header.component.html
@@ -95,7 +95,7 @@
           </div>
           <div>
             <nav class="grid gap-y-8" *ngFor="let link of links">
-              <a [href]="link.url" class="
+              <a [routerLink]="link.url" class="
                     m-1
                     p-3
                     flex
