--- a/src/app/agility/pages/components/featured-post/featured-post.component.html
+++ b/src/app/agility/pages/components/featured-post/featured-post.component.html
@@ -2,28 +2,17 @@
   <div class="flex flex-col sm:flex-row max-w-screen-xl mx-auto pt-8 group">
     <div class="sm:w-1/2 lg:w-2/3 sm:rounded-t-none sm:rounded-l-lg relative">
 
-      
-      <a *ngIf="isDevMode" [routerLink]="['/blog', item.featuredPost.fields?.slug]" class="cursor-pointer">
+
+      <a (click)="navigate($event, '/blog/' + item.featuredPost.fields?.slug)" class="cursor-pointer">
         <div class="h-64 sm:h-96 relative">
-          <img
-            [src]="item.featuredPost.fields?.image?.url"
+          <img [src]="item.featuredPost.fields?.image?.url"
             class="object-cover object-center rounded-t-lg sm:rounded-l-lg sm:rounded-t-none h-full"
-            style="height: 100%; width: 100%"
-          />
+            style="height: 100%; width: 100%" />
         </div>
       </a>
-      <a *ngIf="!isDevMode" [href]="'/blog/' + item.featuredPost.fields?.slug" class="cursor-pointer">
-        <div class="h-64 sm:h-96 relative">
-          <img
-            [src]="item.featuredPost.fields?.image?.url"
-            class="object-cover object-center rounded-t-lg sm:rounded-l-lg sm:rounded-t-none h-full"
-            style="height: 100%; width: 100%"
-          />
-        </div>
-      </a>
+
     </div>
-    <div
-      class="
+    <div class="
         sm:w-1/2
         lg:w-1/3
         bg-gray-100
@@ -33,9 +22,8 @@
         sm:rounded-bl-none sm:rounded-r-lg
         sm:border-t-2 sm:border-l-0
         relative
-      "
-    >
-      <a *ngIf="isDevMode" [routerLink]="['/blog', item.featuredPost.fields?.slug]" class="cursor-pointer">
+      ">
+      <a (click)="navigate($event, '/blog/' + item.featuredPost.fields?.slug)" class="cursor-pointer">
         <div class="font-display uppercase text-primary-500 text-xs font-bold tracking-widest leading-loose">
           {{ category }}
         </div>
@@ -43,28 +31,15 @@
         <div class="mt-4 uppercase text-gray-600 italic font-semibold text-xs">
           {{ date }}
         </div>
-        <h2 class="font-display text-secondary-500 mt-1 font-black text-2xl group-hover:text-primary-500 transition duration-300">
+        <h2
+          class="font-display text-secondary-500 mt-1 font-black text-2xl group-hover:text-primary-500 transition duration-300">
           {{ item.featuredPost.fields?.title }}
         </h2>
         <div class="text-sm mt-3 leading-loose text-gray-600 font-medium">
           {{ excerpt }}
         </div>
       </a>
-      <a *ngIf="!isDevMode" [href]="'/blog/' + item.featuredPost.fields?.slug" class="cursor-pointer">
-        <div class="font-display uppercase text-primary-500 text-xs font-bold tracking-widest leading-loose">
-          {{ category }}
-        </div>
-        <div class="border-b-2 border-primary-500 w-8"></div>
-        <div class="mt-4 uppercase text-gray-600 italic font-semibold text-xs">
-          {{ date }}
-        </div>
-        <h2 class="font-display text-secondary-500 mt-1 font-black text-2xl group-hover:text-primary-500 transition duration-300">
-          {{ item.featuredPost.fields?.title }}
-        </h2>
-        <div class="text-sm mt-3 leading-loose text-gray-600 font-medium">
-          {{ excerpt }}
-        </div>
-      </a>
+
     </div>
   </div>
 </div>
