--- a/src/app/components/site-header/site-header.component.html
+++ b/src/app/components/site-header/site-header.component.html
@@ -28,6 +28,7 @@
               transition
               duration-150
               ease-in-out
+              cursor-pointer
             ">
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M4 6h16M4 12h16M4 18h16" />
@@ -35,37 +36,22 @@
         </button>
       </div>
       <nav class="hidden md:flex space-x-10" *ngFor="let link of links">
-        <!-- Render with href if isDevServer is false -->
-        <a *ngIf="!isDevMode" [href]="link.url" class="
-              text-base
-              leading-6
-              font-medium
-              text-secondary-500
-              hover:text-primary-500
-              border-transparent border-b-2
-              hover:border-primary-500 hover:border-b-primary hover:border-b-2
-              focus:outline-none focus:text-primary-500
-              transition
-              duration-300
-          ">
-          {{ link.title }}
-        </a>
-
-        <!-- Render with routerLink if isDevServer is true -->
-        <a *ngIf="isDevMode" [routerLink]="link.url" class="
-              text-base
-              leading-6
-              font-medium
-              text-secondary-500
-              hover:text-primary-500
-              border-transparent border-b-2
-              hover:border-primary-500 hover:border-b-primary hover:border-b-2
-              focus:outline-none focus:text-primary-500
-              transition
-              duration-300
-          ">
-          {{ link.title }}
-        </a>
+       
+      <a (click)="navigate($event, link.url)" class="
+        text-base
+        leading-6
+        font-medium
+        text-secondary-500
+        hover:text-primary-500
+        border-transparent border-b-2
+        hover:border-primary-500 hover:border-b-primary hover:border-b-2
+        focus:outline-none focus:text-primary-500
+        transition
+        duration-300
+        cursor-pointer
+        ">
+        {{ link.title }}
+      </a>
       </nav>
     </div>
   </div>
