Improvements to document rendering, less flicker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<agility-preview-bar></agility-preview-bar>
-<site-header></site-header>
-<agility-page></agility-page>
-<site-footer></site-footer>
+<router-outlet></router-outlet>
