--- a/src/app/agility/pages/pages.component.html
+++ b/src/app/agility/pages/pages.component.html
@@ -1,12 +1,14 @@
-<ng-container *ngIf="pageStatus === 0"></ng-container>
+<agility-preview-bar></agility-preview-bar>
+<site-header></site-header>
+<ng-container *ngIf="pageStatus === 0">Loading</ng-container>
 <ng-container *ngIf="pageStatus === 404">Page not found.</ng-container>
 <ng-container *ngIf="pageStatus === 500">Error loading page.</ng-container>
-<ng-container *ngIf="pageStatus === 200">
-    <ng-container *ngIf="page?.zones"></ng-container>
-        <ng-container *ngFor="let zone of (page?.zones | keyvalue)">
-            <ng-container *ngFor="let moduleRef of (zone.value | keyvalue)">
-                <agility-component [moduleObj]="moduleRef" [page]="page" [dynamicPageItem]="dynamicPageItem">
-                </agility-component>
-            </ng-container>
+<ng-container *ngIf="pageStatus === 200 || !pageStatus">
+    <ng-container *ngFor="let zone of (page?.zones | keyvalue)">
+        <ng-container *ngFor="let moduleRef of (zone.value | keyvalue)">
+            <agility-component [moduleObj]="moduleRef" [page]="page" [dynamicPageItem]="dynamicPageItem">
+            </agility-component>
         </ng-container>
     </ng-container>
+</ng-container>
+<site-footer></site-footer>
