Clean up, preview mode components

--- a/src/app/agility/pages/components/text-block-with-image/textblockwithimage.component.html
+++ b/src/app/agility/pages/components/text-block-with-image/textblockwithimage.component.html
@@ -12,7 +12,7 @@
     "
   >
     <div class="md:w-6/12 flex-shrink-0 relative">
-      <a  
+      <a
       (click)="navigate($event, item.primaryButton.href)" class="cursor-pointer"
       >
         <img
@@ -24,7 +24,7 @@
       </a>
     </div>
     <div
-      *ngIf="item.imagePosition === 'right</ng-template>'; else elseBlock"
+      *ngIf="item.imagePosition === 'right'; else elseBlock"
       class="md:w-6/12 mt-16 md:mt-0 md:mr-12 lg:mr-16 md:order-first"
     >
       <div class="g:py-8 text-center md:text-left">
