--- a/src/app/agility/pages/components/preview-bar/preview-bar.component.html
+++ b/src/app/agility/pages/components/preview-bar/preview-bar.component.html
@@ -27,17 +27,38 @@
         </a>
       </div>
     </div>
-    <div class="py-4">
+    <div class="py-3 px-4" [ngClass]="visible ? 'bg-white text-black' : ''">
       <div class="flex gap-4 items-center">
         <p class="text-xs md:text-base">
-          {{ isPreview ? 'Previewing' : 'Viewing' }} 
-          <span class="font-bold">{{ isPreview ? 'Latest' : 'Published'}}</span> 
+          {{ isPreview ? 'Previewing' : 'Viewing' }}
+          <span class="font-bold">{{ isPreview ? 'Latest' : 'Published'}}</span>
           {{ isPreview ? 'Changes' : 'Content' }}
         </p>
-        <div><button (click)="togglePreviewMode()" class="bg-yellow-500 px-4 py-2 text-gray-800 hover:bg-yellow-600">
-            {{ isPreview ? 'View Published' : 'Preview Mode' }}
-          </button></div>
+
+
+
+      <ng-container>
+      <div *ngIf="visible" class="p-2 text-gray-200 cursor-pointer z-20" (click)="toggle()">
+        <fa-icon class="mr-2" [icon]="faChevronUp" [ngClass]="visible ? 'bg-white text-black' : ''"></fa-icon>
       </div>
+      <div *ngIf="!visible" class="p-2 text-gray-200 cursor-pointer z-20" (click)="toggle()">
+        <fa-icon class="mr-2" [icon]="faChevronDown"></fa-icon>
+      </div>
+    </ng-container>
+    <ng-container>
+      <div *ngIf="visible" class="absolute bg-white p-4 z-20 shadow-xl  rounded-b-lg rounded-t-none top-[10vh] right-8">
+
+        <button
+        (click)="togglePreviewMode(); toggle()"
+        class="relative text-gray-200 bg-agility p-2 w-full rounded-md text-sm  flex gap-2 items-center justify-center"
+
+      >
+
+         View  {{ isPreview ? 'Live' : 'Preview' }} Mode
+      </button>
+      </div>
+    </ng-container>
+    </div>
     </div>
   </div>
 </div>
